--- a/.github/workflows/deploy-ec2.yaml
+++ b/.github/workflows/deploy-ec2.yaml
@@ -1,4 +1,4 @@
-name: Deploy to EC2 and Run Main
+name: Deploy to EC2
 
 on:
   push:
@@ -21,10 +21,7 @@ jobs:
       - name: Install dependencies on EC2 and run main.py
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.AWS_EC2_USER }}@${{ secrets.AWS_EC2_HOST }} << 'EOF'
-            # Update packages and install git
-            sudo apt-get update -y
-            sudo apt-get install git -y
-            
+        
             # Configure Git to use a GitHub Personal Access Token (PAT) for private repo access
             git config --global credential.helper store
 
@@ -35,10 +32,9 @@ jobs:
             cd MLOps-A01
 
             # Install dependencies (assuming requirements.txt is available)
-            sudo apt-get install python3-pip -y
             pip3 install -r requirements.txt
 
             # Run the main.py script
-            python3 main.py
+            python3 app.py
           EOF
 
