--- a/.github/workflows/render_deploy.yml
+++ b/.github/workflows/render_deploy.yml
@@ -1,45 +1,40 @@
 name: CI/CD Pipeline
-
 on:
   push:
     branches:
-      - 'main'
-      - 'feature-*'
+      - main  
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Deploy to Render
+        env:
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+          RENDER_SERVICE_ID: ${{ secrets.SERVICE_ID }}
+        run: |
+          curl -X POST "https://api.render.com/v1/services/${{ env.RENDER_SERVICE_ID }}/deploys" \
+               -H "Accept: application/json" \
+               -H "Authorization: Bearer ${{ env.RENDER_API_KEY }}" \
+               -H "Content-Type: application/json" \
+               -d '{}'
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.12'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    # Optionally, add steps to run tests here
+ # Optionally, add steps to run tests here
     # - name: Run Tests
     #   run: |
     #     python -m unittest discover -s tests
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Install Render CLI
-      run: npm install -g render-cli
-
-    - name: Deploy to Render
-      env:
-        RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-      run: render deploy --service-id ${{ secrets.RENDER_SERVICE_ID }}
