--- a/.github/workflows/render_deploy.yml
+++ b/.github/workflows/render_deploy.yml
@@ -27,6 +27,7 @@ jobs:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
           RENDER_SERVICE_ID: ${{ secrets.SERVICE_ID }}
         run: |
+          echo "Deploying to Render service ${RENDER_SERVICE_ID}"
           curl -X POST "https://api.render.com/v1/services/${RENDER_SERVICE_ID}/deploys" \
                -H "Accept: application/json" \
                -H "Authorization: Bearer  ${RENDER_API_KEY}" \
